<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:onClick="btnpositivewithconst"
            android:text="@string/btn_positive_with_const"
            android:textAllCaps="false"
            android:textSize="20sp" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:onClick="btnnegaitivewithconst"
            android:text="@string/btn_negaitive_with_const"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:onClick="btnpositivewithoutconst"
            android:text="@string/btn_positive_without_const"
            android:textAllCaps="false"
            android:textSize="20sp" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:onClick="btnnegaitivewithoutconst"
            android:text="@string/btn_negaitive_without_const"
            android:textAllCaps="false"
            android:textSize="20sp" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:onClick="btnpositivewithdynamicconst"
            android:text="@string/btn_positive_with_dynamic_const"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:onClick="btnnegativewithdynamicconst"
            android:text="@string/btn_negative_with_dynamic_const"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:onClick="btnwithdynamicdata"
            android:text="@string/btn_with_dynamic_data"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:onClick="btnnegativewithdynamicdata"
            android:text="@string/btn_negative_with_dynamic_data"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:onClick="btnnfactorial"
            android:text="@string/btn_factorial"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>