<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".factorial.FactorialActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:text="@string/factorial_txt_header"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/factorial_txt_initial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/binomial_exp_txt_n"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/factorial_et_input_n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@null"
            android:backgroundTint="@color/white"
            android:importantForAccessibility="yes"
            android:inputType="number"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>


    <Button
        android:id="@+id/factorial_btn_gen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/factorial_txt_expansion"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/factorial_txt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="30sp" />


</LinearLayout>